--- a/index.html
+++ b/index.html
@@ -1,44 +1,22 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="./style.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-
-    <title>COVID Tracker</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8 text-center">
-                <h1>COVID-19 Tracker</h1>
-                <table class="table" id="covidtable">
-                    <thead class="thead table-dark">
-                        <tr>
-                            <th>Country</th>
-                            <th>Confirmed</th>
-                            <th>Deaths</th>
-                            <th>New Cases</th>
-                            <th>New Deaths</th>
-                        </tr>
-                    </thead>
+    <input type="text" name="" id="vidurl">
+    <button>720p</button>
+    <button>480p</button>
 
-                    <tbody id="tbody">
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
 
     <script src="./app.js"></script>
 </body>
